# py-device-control-with-OCR

./: .gitignore  Application.py  LICENSE  README.md  pyproject.toml
entity/: OptionData.py
func/: ResolutionGroup.py
resouces/: ChineseRecognitionExample.py  FindDialogueAndButtonExample.py  SQLAlchemyExample.py  table-definition.sql
services/: DatabaseOpt.py  Win32Opt.py
